[package]
name = "cudd-sys"
version = "0.1.1"
authors = ["Philip Lewis <pcl@pclewis.com>"]
build = "build.rs"
description = "Bindings for CU Decision Diagram library (CUDD)"
repository = "https://github.com/pclewis/cudd-sys"
license = "CC0-1.0"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.59.1"
autotools = "0.2.3"