[package]
name = "cudd-sys"
version = "1.0.0"
authors = ["Philip Lewis <pcl@pclewis.com>"]
build = "build.rs"
description = "Bindings for CU Decision Diagram library (CUDD)"
repository = "https://github.com/pclewis/cudd-sys"
license = "CC0-1.0"

[dependencies]
libc = "0.2"

[build-dependencies]
autotools = "0.2.3"